# kamadak-exif-cpp

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  deny.toml  test.cpp
src/: interface.rs  lib.rs
