[package]
name = "kamadak-exif-cpp"
version = "0.1.0"
authors = ["okruz@github.com"]
edition = "2021"
license = "Unlicense"

[dependencies]
kamadak-exif = "0.5.5"

[build-dependencies]
cbindgen = "0.26.0"

[profile.release]
strip=true
overflow-checks = true
opt-level = 3
lto = true

[lib]
crate-type = ["cdylib"]


